--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -18,16 +12,96 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+button{
+  background: lightgray;
+  border: 1px solid white;
 
-.App-link {
-  color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  margin: 0px;
+}
+
+p{
+  margin: 0px;
+}
+.normal{
+  background: lightgray;
+  color: black;
+  border: 1px solid white;
+}
+
+.locked{
+  background: #282c34;
+  text-align: center;
+  color: transparent;
+  text-shadow: 0 0 0 darkgrey;
+  padding: 1px; 
+  outline: none;
+}
+
+.errortext{
+  color: red;
+}
+
+.redCell{
+  background: red;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.blueCell {
+  background: blue;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.blackCell {
+  background: black;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.whiteCell {
+  background: #eeeeee;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.greenCell {
+  background: green;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.lightgreyCell {
+  background: lightgrey;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.lightgreenCell {
+  background: lightgreen;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+.lightredCell{
+  background: lightcoral;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
+}
+
+.lightblueCell{
+  background: lightskyblue;
+  border: white 1px solid;
+  width: 5px;
+  height: 5px;
 }
